# Mindustry-Server-Discord-Bot

./: Cargo.toml  build_musl  config.toml  readme.md
src/: main.rs  mindus.rs  structs.rs
