[package]
name = "MSDB"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
serde = "1.0.148"
serenity = "0.11"
strip-ansi-escapes = "0.1.1"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
toml = "0.5.9"
